--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>FM Utopia</title>
+		<title>FM Hasindu</title>
 		<meta charset="utf-8" />
-		<meta name="title" content="FM Utopia">
+		<meta name="title" content="FM Hasindu">
 		<meta name="description" content="FM Utopia is a popular Online Radio Station in Sri Lanka.">
 		<meta name="keywords" content="FM Utopia, Utopia FM, Utopia, FM, Online Radio Station, Utopia Radio,Sri Lanka">
 		<meta name="robots" content="index, follow">
