--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
-						<h1>FM Utopia</h1><br>
+						<h1>FM Hasindu</h1><br>
 						<img id="imge" src="assets/css/images/i1.jpg" >						
 						<nav>
 							<ul>
@@ -33,7 +33,7 @@
 					</header>
 			</div>
 			<div id="footer">
-				<p><a href="https://FmUtopia.tk">© 2021 FM Utopia.</a>&nbsp; All Rights Reserved</p>		
+				<p><a href="https://FmUtopia.tk">© 2023 FM Hasindu.</a>&nbsp; All Rights Reserved</p>		
 			</div>
 		</div>
 		<script>
