--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>FM Hasindu</title>
+		<title>Hasindu FM</title>
 		<meta charset="utf-8" />
-		<meta name="title" content="FM Hasindu">
-		<meta name="description" content="FM Utopia is a popular Online Radio Station in Sri Lanka.">
-		<meta name="keywords" content="FM Utopia, Utopia FM, Utopia, FM, Online Radio Station, Utopia Radio,Sri Lanka">
+		<meta name="title" content="Hasindu FM">
+		<meta name="description" content="Hasindu FM is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
+		<meta name="keywords" content="Hasindu FM,Online Radio Station, JHX FM  Radio,Sri Lanka">
 		<meta name="robots" content="index, follow">
 		<meta name="language" content="English">
+		<meta name="author" content="Hasindu">
 		<meta itemprop="image" src="assets/css/images/Capture.PNG" />
+		<meta name="twitter:title" content="Hasindu FM">
+		<meta name="twitter:description" content="JHX FM is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music."">
+		<meta name="twitter:image" content="assets/css/images/Capture.PNG">
+		<meta name="twitter:card" content="summary_large_image">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/styles.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 		<script type="text/javascript" src="playback.js" ></script>
+		<style>
+			img {
+			  border: 5px solid #ffffff;
+			  border-radius: 15%;
+			  max-width:250px;
+			  opacity: 1;
+			}
+			.footer {
+			  position: fixed;
+			  left: 0;
+			  bottom: 0;
+			  width: 100%;
+			  color: white;
+			  text-align: center;
+			}
+		</style>
 	</head>
 	<body class="loading">
 		<div id="wrapper">
@@ -22,7 +43,7 @@
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
-						<h1>FM Hasindu</h1><br>
+						<h1>Hasindu FM</h1><br>
 						<img id="imge" src="assets/css/images/i1.jpg" >						
 						<nav>
 							<ul>
@@ -32,14 +53,632 @@
 						</nav>
 					</header>
 			</div>
-			<div id="footer">
-				<p><a href="https://FmUtopia.tk">© 2023 FM Hasindu.</a>&nbsp; All Rights Reserved</p>		
-			</div>
 		</div>
+		<div class="footer">
+			<p align="center"><a href="https://hasindu-himasara.github.io/Hasindu-Fm/#">© 2022 Hasindu FM.</a>&nbsp; All Rights Reserved</p>
+			<p><a href="https://t.me/HASINDU_HIMASARA" target="_blank">Designed by Hasindu</a></p>			
+         </div>
 		<script>
 			window.onload = function() { document.body.className = ''; }
 			window.ontouchmove = function() { return false; }
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
 		</script>
-	</body>
+
+										  
+<html lang='en' class=''>
+
+<head>
+
+  <meta charset='UTF-8'>
+  <title>CodePen Demo</title>
+
+  <meta name="robots" content="noindex">
+
+  <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
+  <link rel="mask-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111">
+  <link rel="canonical" href="https://codepen.io/alvaromontoro/pen/GRNmdzB">
+
+  <meta name="monetization" content="$ilp.uphold.com/WUdKN2pAgLAG" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  
+
+  <style class="INLINE_PEN_STYLESHEET_ID">
+    html, body {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(#123, #111);
+}
+
+.snowflake {
+  --size: 1vw;
+  width: var(--size);
+  height: var(--size);
+  background: white;
+  border-radius: 50%;
+  position: absolute;
+  top: -5vh;
+}
+
+@keyframes snowfall {
+  0% {
+    transform: translate3d(var(--left-ini), 0, 0);
+  }
+  100% {
+    transform: translate3d(var(--left-end), 110vh, 0);
+  }
+}
+.snowflake:nth-child(1) {
+  --size: 0.2vw;
+  --left-ini: -4vw;
+  --left-end: 7vw;
+  left: 23vw;
+  animation: snowfall 14s linear infinite;
+  animation-delay: -8s;
+}
+
+.snowflake:nth-child(2) {
+  --size: 0.4vw;
+  --left-ini: 7vw;
+  --left-end: -2vw;
+  left: 26vw;
+  animation: snowfall 12s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(3) {
+  --size: 0.4vw;
+  --left-ini: -5vw;
+  --left-end: -6vw;
+  left: 99vw;
+  animation: snowfall 13s linear infinite;
+  animation-delay: -2s;
+}
+
+.snowflake:nth-child(4) {
+  --size: 0.8vw;
+  --left-ini: 0vw;
+  --left-end: -2vw;
+  left: 31vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(5) {
+  --size: 0.4vw;
+  --left-ini: 10vw;
+  --left-end: 10vw;
+  left: 15vw;
+  animation: snowfall 8s linear infinite;
+  animation-delay: -3s;
+}
+
+.snowflake:nth-child(6) {
+  --size: 0.2vw;
+  --left-ini: 0vw;
+  --left-end: 9vw;
+  left: 98vw;
+  animation: snowfall 10s linear infinite;
+  animation-delay: -10s;
+}
+
+.snowflake:nth-child(7) {
+  --size: 0.6vw;
+  --left-ini: -2vw;
+  --left-end: -8vw;
+  left: 81vw;
+  animation: snowfall 15s linear infinite;
+  animation-delay: -10s;
+}
+
+.snowflake:nth-child(8) {
+  --size: 1vw;
+  --left-ini: 5vw;
+  --left-end: -2vw;
+  left: 9vw;
+  animation: snowfall 10s linear infinite;
+  animation-delay: -2s;
+}
+
+.snowflake:nth-child(9) {
+  --size: 0.2vw;
+  --left-ini: 9vw;
+  --left-end: -9vw;
+  left: 85vw;
+  animation: snowfall 15s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(10) {
+  --size: 0.2vw;
+  --left-ini: 3vw;
+  --left-end: 6vw;
+  left: 44vw;
+  animation: snowfall 10s linear infinite;
+  animation-delay: -4s;
+}
+
+.snowflake:nth-child(11) {
+  --size: 0.6vw;
+  --left-ini: -9vw;
+  --left-end: 1vw;
+  left: 90vw;
+  animation: snowfall 10s linear infinite;
+  animation-delay: -8s;
+}
+
+.snowflake:nth-child(12) {
+  --size: 1vw;
+  --left-ini: -6vw;
+  --left-end: 3vw;
+  left: 91vw;
+  animation: snowfall 6s linear infinite;
+  animation-delay: -3s;
+}
+
+.snowflake:nth-child(13) {
+  --size: 0.4vw;
+  --left-ini: -9vw;
+  --left-end: -2vw;
+  left: 25vw;
+  animation: snowfall 12s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(14) {
+  --size: 0.8vw;
+  --left-ini: 3vw;
+  --left-end: -6vw;
+  left: 9vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -9s;
+}
+
+.snowflake:nth-child(15) {
+  --size: 0.6vw;
+  --left-ini: 4vw;
+  --left-end: -6vw;
+  left: 58vw;
+  animation: snowfall 8s linear infinite;
+  animation-delay: -10s;
+}
+
+.snowflake:nth-child(16) {
+  --size: 0.6vw;
+  --left-ini: 6vw;
+  --left-end: -5vw;
+  left: 48vw;
+  animation: snowfall 7s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(17) {
+  --size: 0.8vw;
+  --left-ini: -4vw;
+  --left-end: 1vw;
+  left: 46vw;
+  animation: snowfall 6s linear infinite;
+  animation-delay: -3s;
+}
+
+.snowflake:nth-child(18) {
+  --size: 0.8vw;
+  --left-ini: -2vw;
+  --left-end: 8vw;
+  left: 68vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(19) {
+  --size: 1vw;
+  --left-ini: -9vw;
+  --left-end: 3vw;
+  left: 61vw;
+  animation: snowfall 7s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(20) {
+  --size: 1vw;
+  --left-ini: -2vw;
+  --left-end: -9vw;
+  left: 66vw;
+  animation: snowfall 14s linear infinite;
+  animation-delay: -3s;
+}
+
+.snowflake:nth-child(21) {
+  --size: 0.2vw;
+  --left-ini: -8vw;
+  --left-end: 3vw;
+  left: 70vw;
+  animation: snowfall 11s linear infinite;
+  animation-delay: -9s;
+}
+
+.snowflake:nth-child(22) {
+  --size: 0.4vw;
+  --left-ini: 4vw;
+  --left-end: -7vw;
+  left: 54vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -1s;
+}
+
+.snowflake:nth-child(23) {
+  --size: 0.2vw;
+  --left-ini: 10vw;
+  --left-end: -3vw;
+  left: 87vw;
+  animation: snowfall 15s linear infinite;
+  animation-delay: -1s;
+}
+
+.snowflake:nth-child(24) {
+  --size: 1vw;
+  --left-ini: -5vw;
+  --left-end: -7vw;
+  left: 9vw;
+  animation: snowfall 10s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(25) {
+  --size: 0.2vw;
+  --left-ini: 8vw;
+  --left-end: -6vw;
+  left: 62vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -5s;
+}
+
+.snowflake:nth-child(26) {
+  --size: 0.2vw;
+  --left-ini: 7vw;
+  --left-end: -3vw;
+  left: 23vw;
+  animation: snowfall 14s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(27) {
+  --size: 0.8vw;
+  --left-ini: -9vw;
+  --left-end: 2vw;
+  left: 39vw;
+  animation: snowfall 11s linear infinite;
+  animation-delay: -5s;
+}
+
+.snowflake:nth-child(28) {
+  --size: 0.6vw;
+  --left-ini: 5vw;
+  --left-end: -3vw;
+  left: 11vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -2s;
+}
+
+.snowflake:nth-child(29) {
+  --size: 0.6vw;
+  --left-ini: 2vw;
+  --left-end: 10vw;
+  left: 37vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(30) {
+  --size: 0.8vw;
+  --left-ini: -6vw;
+  --left-end: -3vw;
+  left: 49vw;
+  animation: snowfall 9s linear infinite;
+  animation-delay: -5s;
+}
+
+.snowflake:nth-child(31) {
+  --size: 1vw;
+  --left-ini: 7vw;
+  --left-end: 0vw;
+  left: 8vw;
+  animation: snowfall 13s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(32) {
+  --size: 1vw;
+  --left-ini: 7vw;
+  --left-end: -7vw;
+  left: 74vw;
+  animation: snowfall 13s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(33) {
+  --size: 1vw;
+  --left-ini: -9vw;
+  --left-end: -4vw;
+  left: 41vw;
+  animation: snowfall 12s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(34) {
+  --size: 1vw;
+  --left-ini: 3vw;
+  --left-end: -3vw;
+  left: 77vw;
+  animation: snowfall 14s linear infinite;
+  animation-delay: -4s;
+}
+
+.snowflake:nth-child(35) {
+  --size: 0.4vw;
+  --left-ini: -5vw;
+  --left-end: -8vw;
+  left: 87vw;
+  animation: snowfall 10s linear infinite;
+  animation-delay: -3s;
+}
+
+.snowflake:nth-child(36) {
+  --size: 0.4vw;
+  --left-ini: 1vw;
+  --left-end: 9vw;
+  left: 67vw;
+  animation: snowfall 8s linear infinite;
+  animation-delay: -8s;
+}
+
+.snowflake:nth-child(37) {
+  --size: 0.4vw;
+  --left-ini: -3vw;
+  --left-end: 9vw;
+  left: 56vw;
+  animation: snowfall 11s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(38) {
+  --size: 0.8vw;
+  --left-ini: 8vw;
+  --left-end: 9vw;
+  left: 93vw;
+  animation: snowfall 7s linear infinite;
+  animation-delay: -3s;
+}
+
+.snowflake:nth-child(39) {
+  --size: 0.6vw;
+  --left-ini: 4vw;
+  --left-end: -6vw;
+  left: 53vw;
+  animation: snowfall 11s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(40) {
+  --size: 0.6vw;
+  --left-ini: 10vw;
+  --left-end: -3vw;
+  left: 75vw;
+  animation: snowfall 15s linear infinite;
+  animation-delay: -10s;
+}
+
+.snowflake:nth-child(41) {
+  --size: 0.4vw;
+  --left-ini: 8vw;
+  --left-end: -7vw;
+  left: 96vw;
+  animation: snowfall 11s linear infinite;
+  animation-delay: -2s;
+}
+
+.snowflake:nth-child(42) {
+  --size: 0.8vw;
+  --left-ini: 6vw;
+  --left-end: -2vw;
+  left: 51vw;
+  animation: snowfall 12s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(43) {
+  --size: 0.2vw;
+  --left-ini: -4vw;
+  --left-end: 2vw;
+  left: 41vw;
+  animation: snowfall 12s linear infinite;
+  animation-delay: -6s;
+}
+
+.snowflake:nth-child(44) {
+  --size: 0.4vw;
+  --left-ini: -5vw;
+  --left-end: -7vw;
+  left: 82vw;
+  animation: snowfall 10s linear infinite;
+  animation-delay: -7s;
+}
+
+.snowflake:nth-child(45) {
+  --size: 0.4vw;
+  --left-ini: 2vw;
+  --left-end: 0vw;
+  left: 84vw;
+  animation: snowfall 12s linear infinite;
+  animation-delay: -8s;
+}
+
+.snowflake:nth-child(46) {
+  --size: 1vw;
+  --left-ini: 3vw;
+  --left-end: 5vw;
+  left: 36vw;
+  animation: snowfall 6s linear infinite;
+  animation-delay: -10s;
+}
+
+.snowflake:nth-child(47) {
+  --size: 0.4vw;
+  --left-ini: 0vw;
+  --left-end: -7vw;
+  left: 32vw;
+  animation: snowfall 6s linear infinite;
+  animation-delay: -3s;
+}
+
+.snowflake:nth-child(48) {
+  --size: 0.4vw;
+  --left-ini: -5vw;
+  --left-end: -9vw;
+  left: 68vw;
+  animation: snowfall 13s linear infinite;
+  animation-delay: -2s;
+}
+
+.snowflake:nth-child(49) {
+  --size: 0.2vw;
+  --left-ini: 1vw;
+  --left-end: 8vw;
+  left: 27vw;
+  animation: snowfall 14s linear infinite;
+  animation-delay: -8s;
+}
+
+.snowflake:nth-child(50) {
+  --size: 0.2vw;
+  --left-ini: 5vw;
+  --left-end: -9vw;
+  left: 10vw;
+  animation: snowfall 11s linear infinite;
+  animation-delay: -9s;
+}
+
+/* added small blur every 6 snowflakes*/
+.snowflake:nth-child(6n) {
+  filter: blur(1px);
+}
+
+/***/
+#youtube {
+  z-index: 2;
+  display: block;
+  width: 100px;
+  height: 70px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background: red;
+  border-radius: 50%/11%;
+  transition: transform 0.5s;
+}
+
+#youtube:hover,
+#youtube:focus {
+  transform: scale(1.1);
+}
+
+#youtube::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 7.5%;
+  left: -6%;
+  width: 112%;
+  height: 85%;
+  background: red;
+  border-radius: 9%/50%;
+}
+
+#youtube::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 40px;
+  width: 45px;
+  height: 30px;
+  border: 15px solid transparent;
+  box-sizing: border-box;
+  border-left: 30px solid white;
+}
+
+#youtube span {
+  font-size: 0;
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+  </style>
+
+  
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeConsoleRunner-d0f3648046d2aaca07bd0037b9e061a26c74a8a999b75672ad6a638cca641472.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRefreshCSS-4793b73c6332f7f14a9b6bba5d5e62748e9d1bd0b5c52d7af6376f3d1c625d7e.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRuntimeErrors-4f205f2c14e769b448bcf477de2938c681660d5038bc464e3700256713ebe261.js"></script>
+</head>
+
+<body>
+  
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+<div class="snowflake"></div>
+  
+<script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
+  <script  src="https://cdpn.io/cp/internal/boomboom/pen.js?key=pen.js-78cacfcc-8ecb-c012-e6d3-aed7aaf08768" crossorigin></script>
+</body>
+
 </html>
